welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: type mismatch;
 found   : java.awt.Color
 required: Int
    T(i)=litMessage()
      ^Array1:10: error: type mismatch;
 found   : String
 required: java.awt.Color
    T(i)=litMessage()
                   ^